--- a/personal-profile.html
+++ b/personal-profile.html
@@ -33,6 +33,7 @@
      </header>
 
      <main>
+         <div class="mainM">
          <div class="content">
              <h1>Personal Profile</h1>
              <h2>Myers-Briggs test</h2>
@@ -54,16 +55,17 @@
              <p>The fact that I score high in conscientiousness and intellect/imagination columns indicates I am responsible diligent worker with more openness and creativity. They are favourable traits welcomed by groups of great minds. However, the low percentiles of 37% in extroversion and 30% in agreeableness show that I lean towards to introvert side and could be critical or harsh to team members.</p>
 
 
-         </div>
 
+     </div>
 
-
+                       <div class="footer">
+                           <p>Neil Sheelin © copyright 2021</p>
+                           <p>Email: s3923582@student.rmit.edu.au</p>
+                       </div>
+ </div>
      </main>
 
-     <div class="footer">
-         <p>Neil Sheelin © copyright 2021</p>
-         <p>Email: s3923582@student.rmit.edu.au</p>
-     </div>
+
 
     </body>
 </html>
