--- a/index.html
+++ b/index.html
@@ -33,25 +33,27 @@
      </header>
 
      <main>
+         <div class="mainM">
          <div class="content">
              <h1>Personal Info</h1>
+             <img src="chef.jpg" alt="profile photo" width="800" height="600">
+             <img src="dish.jpg" alt="dish photo" width="600" height="600">
+
 
              <p>I'm Neil, 35 years old (actually turning 36 this month). I got married 2 years ago and now am living in a small apartment in an eastern suburb in Sydney. I moved in Australia since 2006. After I completed a cookery course at TAFE, I became a professional chef. I dedicated my golden 10+ years to this profession and now I am in a second-in-charge role to manage a large-scale kitchen at a starred hotel. In my spare time, I enjoy cooking, baking, snorkelling and gardening particularly into hydroponics. Recently I've built a small herb bed based on wicking concept at no cost, in which I used plastic containers from beef burger patties packages I found at work. My wife and I adopted two cats last year from Sutherland Animal Shelter. They are so adorable, and I have no resistance to anything that has fluffy fur. Great companions when you study at home! </p>
-         </div>
+             <img src="cats.jpg" alt="cats photo" width="800" height="600">
 
 
-     </main>
+        </div>
 
-     <div class="footer">
-         <p>Neil Sheelin © copyright 2021</p>
-         <p>Email: s3923582@student.rmit.edu.au</p>
-     </div>
+        <div class="footer">
+        <p>Neil Sheelin © copyright 2021</p>
+        <p>Email: s3923582@student.rmit.edu.au</p>
+        <p style="text-align: right;font-size:12px;">Background Photo by Fakurian Design on Unsplash</p>
+       </div>
 
+    </div>
+    </main>
 
     </body>
 </html>
-
-
-<!--
-    Magna fringilla urna porttitor rhoncus dolor purus. Malesuada bibendum arcu vitae elementum. Purus sit amet volutpat consequat.
--->
