Revert "photos uploaded"
This reverts commit abc301f052aca7c03872f12d09bc01cbe0d913fb.

--- a/interest-it.html
+++ b/interest-it.html
@@ -33,28 +33,24 @@
      </header>
 
      <main>
-         <div class="mainM">
          <div class="content">
              <h1>Interest in IT</h1>
 
              <p>
-                I have a long history with computers. In fact, I had my first PC in 1998 due to I had been fascinated in a game called Total Annihilation. It just opened a whole new can of worms to me to learn all aspects of things related to computers such as CPU overclocking, game hacking, hardware configurations, troubleshooting (like OS reinstallation) and networking. I still remember vividly the excitement of getting my first 56k modem to let me connect to the internet. Later I scored a HD mark (97/100 points) on C++ programming at Macquarie Uni I used to study at. That’s how I found I have a naturally strong connection with IT.</p>
+                I have a long history with computers. In fact, I had my first PC in 1998 due to I had been fascinated in a game call Total Annihilation. It just opened a whole new can of worms to me to learn all aspects of things related to computers such as CPU overclocking, game hacking, hardware configurations, troubleshooting (like OS reinstallation) and networking. I still remember vividly the excitement of getting my first 56k modem to let me connect to the internet. Later I scored a HD mark (97/100 points) on C++ programming at Macquarie Uni I used to study at. That’s how I found I have a naturally strong connection with IT.
 
-            <p>
-                Enrolling in RMIT Uni was not a part of my plan initially. During the lockdown time I’m being stood down in Sydney this year, my wife seeing me idling at home doing nothing kind of getting her nerves. She then booked me a free course called Google IT support on Coursera. After I’d done it with ease, I was thinking since I’m doing it, ok let’s do a big one. Then I found myself here. It might be a sketchy and impulsive decision, but as I come along this far, I started to appreciate my wife’s wise move.
+                Enrolling RMIT Uni was not a part of my plan initially. During the lockdown time I’m being stood down in Sydney this year, my wife seeing me idling at home doing nothing kind of getting her nerves. She then booked me a free course called Google IT support on Coursera. After I’d done it with ease, I was thinking since I’m doing it, ok let’s do a big one. Then I found myself here. It might be a sketchy and impulsive decision, but as I come along this far, I started to appreciate my wife’s wise move.
             </p>
+
          </div>
 
 
+     </main>
 
-     </div>
      <div class="footer">
          <p>Neil Sheelin © copyright 2021</p>
          <p>Email: s3923582@student.rmit.edu.au</p>
      </div>
-     </main>
-
-
 
     </body>
 </html>
