--- a/personal-profile.html
+++ b/personal-profile.html
@@ -38,7 +38,7 @@
              <h1>Personal Profile</h1>
              <h2>Myers-Briggs test</h2>
              <p>Results showed below.</p>
-             <img alt="16personalities" src="personality.PNG">
+             <img alt="16personalities" src="16person.png">
              <p>Source: https://www.16personalities.com/</p>
              <p>My interpretation from this test results is that I tend to be a logic and rational thinker with precise executive skills to be able to achieve goals with great commitment. I would be a solid team player in a group mix playing a vital part in organizing, structuring, orientating and leading group members to succeed in any challenges. The weak spots from my personality would be sometimes being stubborn, inflexible at work and expecting others to have reciprocal effort on the common goal.</p>
 
